# atlas-backend-template

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
migrations/: env.py
scripts/: backfill_embeddings.py
src/atlas_template/: main.py  models.py
src/atlas_template/api/v1/: notes.py
src/atlas_template/core/: config.py  database.py  logging.py
src/atlas_template/models/: base.py  note.py
src/atlas_template/repositories/: base.py  notes.py
src/atlas_template/schemas/: notes.py
src/atlas_template/services/: ai.py  embeddings.py
tests/: conftest.py
tests/integration/: test_async_embedding.py  test_live_api.py  test_live_search.py
tests/unit/: test_ai_service.py  test_main.py
